--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.mainactivity.MainActivity"/>
+        <activity android:name=".activity.mainactivity.MainActivity"
+            android:theme="@style/Theme.MainActivity"/>
 
         <meta-data
             android:name="preloaded_fonts"
