--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.irfan.githubuser">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -8,8 +11,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GithubUser">
-        <activity android:name=".activity.DetailActivity"
+        android:usesCleartextTraffic="true"
+        android:theme="@style/Theme.GithubUser"
+        tools:targetApi="m">
+        <activity android:name=".activity.detail.DetailActivity"
             android:theme="@style/Theme.DetailActivity"/>
         <activity android:name=".activity.SplashScreen"
             android:theme="@style/Theme.SplashScreen">
@@ -19,7 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.mainactivity.MainActivity"
+        <activity android:name=".activity.main.MainActivity"
             android:theme="@style/Theme.MainActivity"/>
 
         <meta-data
