--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,21 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.irfan.githubuser">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
+        android:configChanges="locale"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:configChanges="locale"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.GithubUser"
+        android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <activity android:name=".activity.detail.DetailActivity"
-            android:theme="@style/Theme.DetailActivity"/>
-        <activity android:name=".activity.SplashScreen"
+        <activity
+            android:name=".activity.detail.DetailActivity"
+            android:theme="@style/Theme.DetailActivity" />
+        <activity
+            android:name=".activity.SplashScreen"
             android:theme="@style/Theme.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,8 +27,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.main.MainActivity"
-            android:theme="@style/Theme.MainActivity"/>
+        <activity
+            android:name=".activity.main.MainActivity"
+            android:theme="@style/Theme.MainActivity" />
 
         <meta-data
             android:name="preloaded_fonts"
